# redis-docker-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
redis_experiments/receiver_service/: Dockerfile  app.py
redis_experiments/sender_service/: Dockerfile  app.py
